--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea/
+.vscode
+kotlin-js-store/
 
 # User-specific stuff
 .idea/**/workspace.xml
