--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -29,6 +29,7 @@ jobs:
       && (github.event_name != 'pull_request' ||
         github.event.pull_request.head.repo.full_name == github.repository
       )
+      && github.ref == 'refs/heads/master'
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.0.2
