ci: fix path on trigger the ci

--- a/.github/workflows/dispatchers.yml
+++ b/.github/workflows/dispatchers.yml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
   push:
     branches-ignore:
-      - 'renovate/**'
+      - 'dependabot/**'
     paths-ignore:
       - 'CHANGELOG.md'
       - 'LICENSE'
