--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,3 +5,11 @@ pull_request_rules:
     actions:
       merge:
         method: rebase
+  - name: Automatic merge renovate PRs
+    conditions:
+      - author=renovate[bot]
+      - -conflict # No conflict
+      - -draft # The PR should not be a 'draft'
+    actions:
+      merge:
+        method: rebase
