--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,6 +8,7 @@ pull_request_rules:
   - name: Automatic merge renovate PRs
     conditions:
       - author=renovate[bot]
+      - check-success=CI/CD
       - -conflict # No conflict
       - -draft # The PR should not be a 'draft'
     actions:
