ci: add workflow to publish docsite

--- a/.github/workflows/dispatchers.yml
+++ b/.github/workflows/dispatchers.yml
@@ -27,3 +27,7 @@ jobs:
     needs: [ dispatcher ]
     uses: ./.github/workflows/build-and-release.yml
     secrets: inherit
+
+  docsite:
+    uses: ./.github/workflows/publish-docsite.yml
+    secrets: inherit
