--- a/.github/workflows/publish-docsite.yml
+++ b/.github/workflows/publish-docsite.yml
@@ -24,6 +24,7 @@ jobs:
           npm install
           npm run build
       - name: Release docsite to Github Pages
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/master'
         uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
           BRANCH: gh-pages
