--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ detekt = "1.21.0"
 ktlint-plugin = "11.0.0"
 kotest = "5.5.0"
 shadowjar = "7.1.2"
+koin = "3.2.0"
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
@@ -22,6 +23,8 @@ kotest-runner-junit5-jvm = { module = "io.kotest:kotest-runner-junit5-jvm", vers
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlin-test-common = { module = "org.jetbrains.kotlin:kotlin-test-common", version.ref = "kotlin" }
 kotlin-test-annotations-common = { module = "org.jetbrains.kotlin:kotlin-test-annotations-common", version.ref = "kotlin" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 
 [bundles]
 kotlin-testing-common = [
@@ -31,4 +34,4 @@ kotlin-testing-common = [
   "kotlin-test-common",
   "kotlin-test-annotations-common",
 ]
-kotlin-testing-jvm = ["kotest-assertions-core-jvm", "kotest-runner-junit5-jvm"]
+kotlin-testing-jvm = [ "kotest-assertions-core-jvm", "kotest-runner-junit5-jvm" ]
