--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,6 +10,7 @@ pull_request_rules:
       - author=renovate[bot]
       - -conflict # No conflict
       - -draft # The PR should not be a 'draft'
+      - check-success=ci-cd / success
     actions:
       merge:
         method: rebase
