--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin" }
 detekt-gradle = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 ktlint-gradle = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-plugin" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadowjar" }
+docker = { id = "com.bmuschko.docker-remote-api", version = "8.1.0" }
 
 [libraries]
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
@@ -34,4 +35,4 @@ kotlin-testing-common = [
   "kotlin-test-common",
   "kotlin-test-annotations-common",
 ]
-kotlin-testing-jvm = [ "kotest-assertions-core-jvm", "kotest-runner-junit5-jvm" ]
+kotlin-testing-jvm = ["kotest-assertions-core-jvm", "kotest-runner-junit5-jvm"]
