--- a/examples/example-01/docker-compose.yml
+++ b/examples/example-01/docker-compose.yml
@@ -8,6 +8,10 @@ x-comm: &comm
   build:
     dockerfile: communication.Dockerfile
 
+x-sens: &sens
+  build:
+    dockerfile: sensors.Dockerfile
+
 x-link: &link
   restart: on-failure
   depends_on:
@@ -51,6 +55,22 @@ services:
 
   communication-1:
     <<: *comm
+    environment:
+      DEVICE_ID: "1"
+    networks:
+      - proxynet
+    <<: *link
+
+  sensors-0:
+    <<: *sens
+    environment:
+      DEVICE_ID: "0"
+    networks:
+      - proxynet
+    <<: *link
+
+  sensors-1:
+    <<: *sens
     environment:
       DEVICE_ID: "1"
     networks:
