--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,10 +13,11 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin" }
 detekt-gradle = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 ktlint-gradle = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-plugin" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadowjar" }
-docker = { id = "com.bmuschko.docker-remote-api", version = "8.1.0" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version = "0.6.1" }
 taskTree = "com.dorongold.task-tree:2.1.0"
+conventionalCommits = "it.nicolasfarabegoli.conventional-commits:3.0.12"
+publishOnCentral = "org.danilopianini.publish-on-central:2.0.6"
 
 [libraries]
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
