--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -54,19 +54,23 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.1.0
+        with:
+          fetch-depth: 0
       - name: Setup Java
         uses: actions/setup-java@v3.5.1
         with:
           distribution: ${{ env.JDK_DISTRIUTION }}
           java-version: ${{ env.JDK_VERSION }}
+          server-id: ossrh
+          server-username: MAVEN_CENTRAL_USERNAME
+          server-password: MAVEN_CENTRAL_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_PRIVATEKEY }}
+          gpg-passphrase: GPG_PASSPHRASE
           cache: gradle
-#      - name: Release artifacts
-#        run: |
-#          npm install
-#          npx semantic-release
-#        env:
-#          MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-#          MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+      - name: Release artifacts
+        run: |
+          npm install
+          npx semantic-release
 
   success:
     runs-on: ubuntu-latest
