ci: setup github token

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -71,6 +71,8 @@ jobs:
         run: |
           npm install
           npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
   success:
     runs-on: ubuntu-latest
