--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -56,6 +56,7 @@ jobs:
         uses: actions/checkout@v3.1.0
         with:
           fetch-depth: 0
+          token: ${{ secrets.PERSONAL_TOKEN }}
       - name: Setup Java
         uses: actions/setup-java@v3.6.0
         with:
