ci: add token to codecov action to prevent intermittent 404 on upload

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -34,6 +34,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: build/reports/kover/merged/xml/report.xml
           flags: unittests
           fail_ci_if_error: true
