chore: apply kotlin serialization to all subprojects

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ kover = { id = "org.jetbrains.kotlinx.kover", version = "0.6.1" }
 taskTree = "com.dorongold.task-tree:2.1.0"
 conventionalCommits = "it.nicolasfarabegoli.conventional-commits:3.0.13"
 publishOnCentral = "org.danilopianini.publish-on-central:2.0.8"
+gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning:0.3.0"
 
 [libraries]
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
