--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -17,6 +17,11 @@ jobs:
     concurrency:
       group: build-${{ github.workflow }}-${{ matrix.os }}-${{ github.event.number || github.ref }}
       cancel-in-progress: true
+    services:
+      rabbitmq:
+        image: 'rabbitmq:3-alpine'
+        ports:
+          - 5672:5672
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.1.0
