--- a/.github/workflows/publish-docsite.yml
+++ b/.github/workflows/publish-docsite.yml
@@ -10,11 +10,15 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.1.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
       - name: Build docsite
         run: |
           cd docsite
-          npm install
-          npm run build
+          yarn install
+          yarn run build
       - name: Release docsite to Github Pages
         if: github.event_name != 'pull_request' && github.ref == 'refs/heads/master'
         uses: JamesIves/github-pages-deploy-action@v4.4.1
