--- a/docsite/package.json
+++ b/docsite/package.json
@@ -13,6 +13,9 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
+  "resolutions": {
+    "mermaid": "9.1.7"
+  },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
@@ -23,8 +26,8 @@
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "rehype-katex": "^6.0.0",
-    "remark-math": "^4.0.0"
+    "rehype-katex": "5.0.0",
+    "remark-math": "3.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0"
