ci: success job should depends also on docsite job

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -107,6 +107,7 @@ jobs:
     needs:
       - release
       - build
+      - docsite
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
