--- a/docsite/package.json
+++ b/docsite/package.json
@@ -22,12 +22,12 @@
     "@docusaurus/theme-mermaid": "2.2.0",
     "@mdx-js/react": "1.6.22",
     "clsx": "1.2.1",
-    "hast-util-is-element": "^2.0.0",
+    "hast-util-is-element": "2.1.2",
     "prism-react-renderer": "1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-katex": "6.0.2",
-    "remark-math": "5.1.1"
+    "remark-math": "3.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0"
