--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,13 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>nicolasfara/renovate-config:kotlin"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": [
+        "remark-math"
+      ],
+      "allowedVersions": "<=3"
+    }
   ]
 }
