--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -44,6 +44,8 @@ jobs:
             echo "Staging repositories ID file not found" &&
             exit 1
           )
+          REPO_IDS=$(cat build/staging-repo-ids.properties)
+          echo "Staging repositories IDs:\n$REPO_IDS"
           while IFS= read -r line; do echo "$line" >> $GITHUB_OUTPUT; done < build/staging-repo-ids.properties
           npm install
           npx semantic-release --dry-run
