--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -61,6 +61,8 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.3.0
+        with:
+          fetch-depth: 0
       - name: Setup Java
         uses: actions/setup-java@v3.9.0
         with:
@@ -120,7 +122,7 @@ jobs:
           FOLDER: docsite/build
 
   close-staging-repos:
-    needs: [ staging-repo, build, docsite ]
+    needs: [ staging-repo, build ]
     runs-on: ubuntu-latest
     concurrency:
       group: close-staging-repos
