ci: use default version when no new release will be triggered

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -46,9 +46,16 @@ jobs:
           )
           REPO_IDS=$(cat build/staging-repo-ids.properties)
           echo "Staging repositories IDs:\n$REPO_IDS"
-          while IFS= read -r line; do echo "$line" >> $GITHUB_OUTPUT; done < build/staging-repo-ids.properties
+          cat "build/staging-repo-ids.properties" >> $GITHUB_OUTPUT
           npm install
           npx semantic-release --dry-run
+          DEFAULT_VERSION="$(git describe --tags)"
+          if [[ -z "${{ steps.staging-repo.outputs.new-release-version }}" ]]; then
+            echo "No new release version found, fallback to default version: $DEFAULT_VERSION"
+            echo "new-release-version=$DEFAULT_VERSION" >> $GITHUB_OUTPUT
+          else
+            echo "New release version found: ${{ steps.staging-repo.outputs.new-release-version }}"
+          fi
   build:
     needs: [ staging-repo ]
     strategy:
